# medical-chatbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  store_index.py  template.py
.github/workflows/: ci.yml
data/: retrieval_eval.json
scripts/: project_template.py
src/: evaluate.py  evaluate_llm.py  helper.py  hybrid_retrieval.py  indexing.py  llm_config.py  prompt.py  webapp.py
static/: style.css
templates/: chat.html
tests/: test_evaluate.py  test_evaluate_llm.py  test_hybrid_retrieval.py  test_store_index.py  test_webapp.py
